# calendar-audit-backend

./: .env.local  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
calendar_audit/: api.py  apps.py  middleware.py  models.py  urls.py  views.py
calendar_audit/migrations/: 0001_initial.py  0002_rename_env_event_end.py  0003_event_updated_at.py  0004_event_summary.py
config/: settings.py  urls.py
