[tool.poetry]
name = "calendar-audit"
version = "0.1.0"
description = ""
authors = ["Brandon <BrandonWL@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
djangorestframework = "^3.13.1"
pre-commit = "^2.20.0"
django-environ = "^0.9.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
